# linux-dsoxlab-training

./: .gitignore  .plumber.yaml  .poutine.yml  .pre-commit-config.yaml  CHANGELOG.fr.md  CHANGELOG.md  CODE_OF_CONDUCT.fr.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  RELEASING.fr.md  RELEASING.md  SECURITY.fr.md  SECURITY.md  conftest.py  meta.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  plumber.yml  release.yml  scorecard.yml
labs/linux/capstones/lfcs-mock-exam/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/capstones/rhcsa-mock-exam/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-apparmor/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-essential-commands/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-firewall/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-network/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-packages/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-selinux/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-storage/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-systemd/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/drills/drill-users-groups/: README.fr.md  README.md  cleanup.yaml  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md  setup.yaml
labs/linux/l1/l1-01-discover-linux-map/: README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-02-choose-distro/: README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-03-prepare-vm/: README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-04-first-terminal/: README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-05-read-a-command/: lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-06-get-help/: lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-07-linux-filesystem/: lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-08-navigate-filesystem/: README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-09-paths-absolute-relative/: README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-bash-script/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-choose-distro/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-discover-linux-map/: README.fr.md  README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-env-profiles/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-find-files/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-first-terminal/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-get-help/: README.fr.md  README.md  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-git-basics/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  scenario.md
labs/linux/l1/l1-grep-regex/: README.fr.md  README.md  lab.fr.yaml  lab.yaml  scenario.fr.md  (+1 more)
scripts/: gen_catalog.py
tests/: test_doc_urls.py  test_liens_internes.py  test_outillage_coherent.py  test_solutions_chiffrees.py
(+969 files in other folders)
